<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:backgroundTint="@color/white"
    tools:context="com.example_tastyfood_my_release_project_println_out_systems_food_tasty.presentation.screen.fragment.for_screen.FragmentMainContent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tasty_food_logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/tasty_food_log"
                android:textColor="@color/green"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_random_food"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_base_dining"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/random_food"
                android:textColor="@color/gray"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tasty_food_logo"
                app:layout_constraintTop_toBottomOf="@+id/tasty_food_logo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtv_user_food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_search"
                android:drawableEnd="@drawable/ic_search"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_yummy"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="22dp"
                android:paddingTop="16dp"
                android:paddingEnd="22dp"
                android:paddingBottom="16dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_random_food" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_food_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="160dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtv_user_food" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_food_by_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rcv_food_category" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>